--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -200,7 +200,7 @@
     \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - \emph{Coursera} (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
-        \item \textbf{Tools used:} Django, SQLite, HTML5, CSS, JavaScript, Bash
+        \item \textbf{Tools used:} Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
