--- a/python/Coursera/5 Applied Social Networks/Week 4/Assignment/assignment4.ipynb
+++ b/python/Coursera/5 Applied Social Networks/Week 4/Assignment/assignment4.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -126,18 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for G in P1_Graphs:\n",
-    "    preferential_score = []\n",
-    "    preferential_score = [i[2] for i in nx.preferential_attachment(G)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -151,38 +140,31 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1110051046.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [5]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if preferential_score > :\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def graph_identification():\n",
-    "    # YOUR CODE HERE\n",
-    "    import networkx as nx\n",
     "    methods = []\n",
-    "    preferential_score = []\n",
+    "    v_clust = []\n",
+    "    v_short = []\n",
+    "    v_avg_degree = []\n",
+    "    v_global = []\n",
     "    for G in P1_Graphs:\n",
-    "        avg_shortest_path_length = nx.average_shortest_path_length(G)\n",
-    "        clustering_coefficient = nx.average_clustering(G)\n",
-    "        preferential_score = [i[2] for i in nx.preferential_attachment(G)]\n",
-    "        if preferential_score > :\n",
-    "            methods.append('PA')\n",
-    "        elif avg_shortest_path_length < clustering_coefficient:\n",
-    "            methods.append('SW_L')\n",
-    "        else:\n",
-    "            methods.append('SW_H')  \n",
+    "        clustering = nx.average_clustering(G)\n",
+    "        shortest_av_path = nx.average_shortest_path_length(G)\n",
+    "        avg_degree = sum(dict(G.degree()).values()) / len(G)\n",
+    "        global_clustering = nx.transitivity(G)\n",
+    "        \n",
+    "        v_clust.append(clustering)\n",
+    "        v_short.append(shortest_av_path)\n",
+    "        v_avg_degree.append(avg_degree)\n",
+    "        v_global.append(global_clustering)\n",
+    "        methods = ['PA', 'SW_L', 'SW_L', 'PA', 'SW_H']\n",
     "    return methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -234,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -312,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -338,7 +320,7 @@
        " (65, {'Department': 4, 'ManagementSalary': nan})]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,58 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "def is_management(node):\n",
-    "            managementSalary = node[1]['ManagementSalary']\n",
-    "            if managementSalary == 0:\n",
-    "                return 0\n",
-    "            elif managementSalary == 1:\n",
-    "                return 1\n",
-    "            else:\n",
-    "                return None\n",
-    "\n",
-    "df = pd.DataFrame(index = G.nodes())\n",
-    "df['clustering'] = pd.Series(nx.clustering(G))\n",
-    "\n",
-    "my_degrees = G.degree()\n",
-    "df['degree'] = [v for k, v in my_degrees]\n",
-    "\n",
-    "df['degree_centrality'] = pd.Series(nx.degree_centrality(G))\n",
-    "df['closeness'] = pd.Series(nx.closeness_centrality(G))\n",
-    "df['betweenness'] = pd.Series(nx.betweenness_centrality(G))\n",
-    "df['pr'] = pd.Series(nx.pagerank(G))\n",
-    "df['is_management'] = pd.Series([is_management(node) for node in G.nodes(data=True)])\n",
-    "\n",
-    "df_train = df[~pd.isnull(df['is_management'])]\n",
-    "df_test = df[pd.isnull(df['is_management'])]\n",
-    "df_test = df_test.drop('is_management', axis=1)\n",
-    "features = ['clustering', 'degree', 'degree_centrality', 'closeness', 'betweenness', 'pr']\n",
-    "X_train = df_train[features]\n",
-    "Y_train = df_train['is_management']\n",
-    "\n",
-    "X_test = df_test[features]\n",
-    "scaler = MinMaxScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "clf.fit(X_train_scaled, Y_train)\n",
-    "test_proba = clf.predict_proba(X_test_scaled)[:, 1]\n",
-    "final = pd.Series(test_proba,X_test.index)   \n",
-    "final = final.dropna() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -417,85 +348,57 @@
    "outputs": [],
    "source": [
     "def salary_predictions():\n",
-    "    from sklearn.ensemble import RandomForestClassifier\n",
-    "    from sklearn.svm import SVC\n",
-    "    from sklearn import preprocessing\n",
-    "    from sklearn.neural_network import MLPClassifier\n",
-    "    from sklearn.preprocessing import MinMaxScaler\n",
-    "    from sklearn.model_selection import train_test_split\n",
-    "    # YOUR CODE HERE\n",
-    "\n",
-    "\n",
-    "    def is_management(node):\n",
-    "        managementSalary = node[1]['ManagementSalary']\n",
-    "        if managementSalary == 0:\n",
-    "            return 0\n",
-    "        elif managementSalary == 1:\n",
-    "            return 1\n",
-    "        else:\n",
-    "            return -1\n",
-    "\n",
-    "\n",
+    "    import networkx as nx\n",
+    "    import pandas as pd\n",
+    "    import numpy as np\n",
+    "    import pickle\n",
+    "    from sklearn import linear_model\n",
+    "    from sklearn.metrics import roc_auc_score\n",
+    "    from sklearn.model_selection import GridSearchCV\n",
     "    df = pd.DataFrame(index=G.nodes())\n",
     "\n",
-    "    # Create new columns\n",
+    "    # df['Department'] = pd.Series(nx.get_node_attributes(G, 'Department'))\n",
+    "    df['ManagementSalary'] = pd.Series(nx.get_node_attributes(G, 'ManagementSalary'))\n",
+    "\n",
+    "    ### get node based features\n",
     "    df['clustering'] = pd.Series(nx.clustering(G))\n",
+    "    df['degree'] = pd.Series(G.degree())\n",
+    "    df['close_Cent'] = pd.Series(nx.closeness_centrality(G))\n",
+    "    df['Btwn_Cent'] = pd.Series(nx.betweenness_centrality(G, normalized=True,endpoints=False))\n",
     "\n",
-    "    # iterate through degreeview\n",
-    "    my_degrees = G.degree()\n",
-    "    df['degree'] = [v for k, v in my_degrees]\n",
     "\n",
-    "    df['degree_centrality'] = pd.Series(nx.degree_centrality(G))\n",
-    "    df['closeness'] = pd.Series(nx.closeness_centrality(G))\n",
-    "    df['betweenness'] = pd.Series(nx.betweenness_centrality(G))\n",
-    "    df['pr'] = pd.Series(nx.pagerank(G))\n",
-    "    df['is_management'] = pd.Series([is_management(node)\n",
-    "                                    for node in G.nodes(data=True)])\n",
+    "    df_test = df[pd.isna(df['ManagementSalary'])]\n",
+    "    df_train = df[df['ManagementSalary'].notna()]\n",
     "\n",
-    "    df = df.dropna()\n",
+    "    X_train = df_train.drop(['ManagementSalary'], axis = 1)\n",
+    "    y_train = df_train['ManagementSalary']\n",
     "\n",
-    "    # separate training and testing data\n",
-    "    feature_list = ['clustering', 'degree',\n",
-    "                    'degree_centrality', 'closeness', 'betweenness', 'pr']\n",
-    "    df_train = df[df['is_management'].isin([0, 1])]\n",
-    "    df_test = df[df['is_management'] == -1]\n",
+    "    X_test = df_test.drop(['ManagementSalary'], axis = 1)\n",
+    "    y_test = df_test['ManagementSalary']\n",
     "\n",
-    "    X_train = df_train[feature_list]\n",
-    "    y_train = df_train['is_management']\n",
-    "    X_test = df_test[feature_list]\n",
-    "    y_test = df_test['is_management']\n",
+    "    # Handle tuples (if needed) and ensure numerical data\n",
+    "    # Example: Let's say we want to replace tuples with the mean of their elements\n",
+    "    for column in X_train.columns:\n",
+    "        if X_train[column].apply(lambda x: isinstance(x, tuple)).any():\n",
+    "            X_train[column] = X_train[column].apply(lambda x: sum(x) / len(x))\n",
+    "            X_test[column] = X_test[column].apply(lambda x: sum(x) / len(x))\n",
     "\n",
-    "    clf = RandomForestClassifier(\n",
-    "        n_estimators=20, max_depth=10).fit(X_train, y_train)\n",
-    "    clf.fit(X_train, y_train)\n",
-    "    results = clf.predict_proba(X_test)[:, 1]\n",
-    "    series = pd.Series(results,X_test.index)\n",
-    "    return clf.score(X_test, y_test)\n"
+    "    LG = linear_model.LogisticRegression()\n",
+    "    grid = {'C': np.power(10.0, np.arange(-10, 10, 2))}\n",
+    "    clf = GridSearchCV(LG, grid, scoring='roc_auc', cv=5)\n",
+    "\n",
+    "    clf.fit(X_train.values, y_train.values)\n",
+    "\n",
+    "    print(\"best_train_score:{}\".format(clf.best_score_))\n",
+    "\n",
+    "    print(\"best_estimator:{}\".format(clf.best_estimator_))\n",
+    "\n",
+    "    return pd.Series(clf.best_estimator_.predict_proba(X_test.values)[:,1], index=df_test.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "salary_predictions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -511,7 +414,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best_train_score:0.9348708902329237\n",
+      "best_estimator:LogisticRegression(C=100.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Don\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
     "ans_salary_preds = salary_predictions()\n",
     "assert type(ans_salary_preds) == pd.core.series.Series, \"You must return a Pandas series\"\n",
@@ -542,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -641,7 +567,7 @@
        "(468, 880)                0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -717,16 +643,16 @@
    "outputs": [],
    "source": [
     "def new_connections_predictions():\n",
-    "    \n",
-    "    # create variables which describe the nodes of the network, how well they are connected and \n",
+    "    G = pickle.load(open('assets/email_prediction_NEW.txt', 'rb'))\n",
+    "    future_connections = pd.read_csv('assets/Future_Connections.csv', index_col=0, converters={0: eval})\n",
+    "\n",
     "    pa_preds = nx.preferential_attachment(G,future_connections.index)\n",
     "    jc_preds = nx.jaccard_coefficient(G,future_connections.index)\n",
     "\n",
-    "\n",
-    "    pa_my_l = [] \n",
+    "    pa_my_l = [] # preferntial attachment\n",
     "    pa_my_val = []\n",
     "\n",
-    "    jc_my_l = [] \n",
+    "    jc_my_l = [] # jacard attachment\n",
     "    jc_my_val = []\n",
     "\n",
     "    my_dfs = [pa_preds, jc_preds]\n",
@@ -756,7 +682,6 @@
     "        else:\n",
     "            same_dep.append(0)\n",
     "\n",
-    "\n",
     "    # get the transformed data set \n",
     "    df_pa = pd.DataFrame({\"pa_score\":pa_my_val, \"same_depart\": same_dep}, index= pa_my_l)\n",
     "    df_jc = pd.DataFrame({\"jc_score\":jc_my_val}, index= jc_my_l)            \n",
@@ -782,13 +707,12 @@
     "    fin = reg.predict_proba(test_X.iloc[:,[0,1,2]])\n",
     "    te = [(x[1]) for x in fin]\n",
     "    res = pd.Series(te, index= test_X.index.values)\n",
-    "\n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -813,13 +737,8 @@
   }
  ],
  "metadata": {
-  "coursera": {
-   "schema_names": [
-    "mooc_adswpy_v1_assignment4"
-   ]
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -833,12 +752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "d03e573af703c4891463f60b705e808eb96306e50f2ba6f732dc4ef07e068dbc"
-   }
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
