--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -193,6 +193,10 @@
 \header{Certifications and Exams} \\
 \vspace{1mm}
 \begin{itemize}
+    \item Web Applications for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) - \emph{Coursera} (4 courses) \hfill \emph{Oct 2023}
+    \begin{itemize}
+        \item \textbf{Tools used:} MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
+    \end{itemize}
     \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - \emph{Coursera} (5 courses) \hfill \emph{Aug 2023}
     \begin{itemize}
         \item \textbf{Tools used:} Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
@@ -203,7 +207,6 @@
         \item \textbf{Tools used:} Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed SOA Exam P \hfill \emph{May 2023}
-    \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
 \vspace{1mm}
 
