--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -110,9 +110,10 @@
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst \& Salesforce Admin} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
-    \item Assisting in implementing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
-    \item Querying relational databases to validate and clean for migration into Salesforce (SQL, Python)
+    \item Assisting in implementing and testing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
+    \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
     \item Creating Salesforce reports, dashboards, flows, cadences, and Marketing Cloud email templates
+    \item Developing IBM TM1/Planning Analytics processes for financial reporting
 \end{itemize}
 \vspace{1mm}
 
