--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -113,7 +113,7 @@
     \item Assisting in implementing and testing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
     \item Creating Salesforce reports, dashboards, flows, cadences, and Marketing Cloud email templates
-    \item Developing IBM TM1/Planning Analytics processes for financial reporting
+    \item Developing IBM TM1/Planning Analytics processes for financial forecasting and modeling
 \end{itemize}
 \vspace{1mm}
 
