--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -18,7 +18,7 @@
     urlcolor=blue
 }
 
-\usepackage[margin=0.825in]{geometry}
+\usepackage[margin=0.8in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
@@ -93,7 +93,7 @@
 \setlist[itemize]{noitemsep, nolistsep,leftmargin=1.5em}
 \begin{document}
 \vspace*{-45pt}
-\fontsize{11}{11.5}\selectfont
+\fontsize{10.5}{11.5}\selectfont
 
 
 %==== Profile ====%
@@ -110,10 +110,10 @@
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst \& Salesforce Admin} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
-    \item Assisting in implementing and testing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
+    \item Assisting in implementing, testing, and training Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
     \item Creating Salesforce reports, dashboards, flows, cadences, and Marketing Cloud email templates
-    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (TurboIntegrator, MDX)
+    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (SQL, TurboIntegrator processes, TM1 rules, MDX)
 \end{itemize}
 \vspace{1mm}
 
@@ -121,7 +121,7 @@
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooted, built, and tested Laserfiche automated Workflow, Quick Fields, and Form processes
-    \item Maintained non-clustered SQL servers (stored procedures, SSL certs, TLS config)
+    \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
     \item Administered internal IT support
 \end{itemize}    
@@ -145,7 +145,7 @@
 \end{itemize}
 \vspace{1mm}
 
-\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
+% \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
@@ -194,6 +194,7 @@
 \header{Certifications and Exams} \\
 \vspace{1mm}
 \begin{itemize}
+    \item Database Design and Basic SQL in PostgreSQL (\href{https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48}{AD5HZ8JGMZ48}) \hfill \emph{Jan 2023}
     \item Web Applications for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) - \emph{Coursera} (4 courses) \hfill \emph{Oct 2023}
     \begin{itemize}
         \item \textbf{Tools used:} MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
