--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -145,7 +145,7 @@
 \end{itemize}
 \vspace{1mm}
 
-% \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
+\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
