--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -112,8 +112,8 @@
 \begin{itemize}
     \item Assisting in implementing, testing, and training Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
-    \item Creating Salesforce reports, dashboards, flows, cadences, and Marketing Cloud email templates
-    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (SQL, TurboIntegrator processes, TM1 rules, MDX)
+    \item Creating Salesforce reports, dashboards, flows, cadences, and email templates
+    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (ETL, TurboIntegrator processes, TM1 business rules, MDX)
 \end{itemize}
 \vspace{1mm}
 
@@ -173,7 +173,7 @@
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
         \item \textbf{Tools used:} R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
-        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
+        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
     \end{itemize}
 \end{itemize}
 \vspace{1mm}
