--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -170,7 +170,7 @@
 \header{Education} \\
 \vspace{1mm}
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{MS Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
+\textit{Master of Science in Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
@@ -181,14 +181,14 @@
 \vspace{1mm}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
-\textit{MA Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
+\textit{Master of Arts in Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
     \item Recipient of Full Tuition for Excellence Scholarship
 \end{itemize}
 \vspace{1mm}
 
 \textbf{University of Michigan College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
-\textit{BA General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
+\textit{Bachelor of Arts in General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
 \vspace{1mm}
 %==== Certificates ====%
