--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -112,7 +112,7 @@
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst \& Salesforce Admin} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (ETL, TurboIntegrator processes, TM1 business rules, MDX)
+    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (ETL, TurboIntegrator processes, TM1 business rules, MDX, Cognos Command Center)
     \item Assisting implementing, testing, and training in  Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
     \item Creating Salesforce reports, dashboards, flows, cadences, and email templates
@@ -170,7 +170,7 @@
 \header{Education} \\
 \vspace{1mm}
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{Master of Science in Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
+\textit{Master of Science in Agricultural and Applied Economics} \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
@@ -183,7 +183,7 @@
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{Master of Arts in Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
-    \item Recipient of Full Tuition for Excellence Scholarship
+    \item \textbf{Scholarship:} Full Tuition for Excellence
 \end{itemize}
 \vspace{1mm}
 
