--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -59,11 +59,11 @@
 
 \newcommand{\header} [1] {
     \vspace{1mm}
-    {\textsc{\large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}} % center and underline
+    {\textsc{\textbf{\large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}} % center and underline
 }
 
 \newcommand{\employer} [3] {
-    { \textbf{#1} (#2)\\ \underline{\textbf{\emph{#3}}}\\  }
+    { \textsc{#1} (#2)\\ \underline{\textsc{\emph{#3}}}\\  }
 }
 
 \newcommand{\contact} [3] {
@@ -82,13 +82,13 @@
 }
 
 \newcommand{\schoolwithcourses} [4] {
-    \textbf{#1} #2 $\bullet$ #3\\
+    \textsc{#1} #2 $\bullet$ #3\\
     #4 \\
     \vspace*{5pt}
 }
 
 \newcommand{\school} [4] {
-    \textbf{#1} #2 $\bullet$ #3\\
+    \textsc{#1} #2 $\bullet$ #3\\
     #4 \\
 }
 % END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
@@ -112,10 +112,10 @@
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst \& Salesforce Admin} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics processes and business rules for financial reporting and forecasting (ETL, TurboIntegrator processes, TM1 business rules, MDX, Cognos Command Center)
-    \item Assisting implementing, testing, and training in  Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
+    \item Developing IBM TM1/Planning Analytics processes and business rules for financial planning and analysis (ETL, TurboIntegrator processes, TM1 business rules, MDX, Cognos Command Center)
+    \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
-    \item Creating Salesforce reports, dashboards, flows, cadences, and email templates
+    \item Creating Salesforce reports, dashboards, flows, cadences, and email templates for management and end users
 \end{itemize}
 \vspace{1mm}
 
@@ -142,9 +142,9 @@
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
-\begin{itemize}
-    \item Researched and presented master's thesis: economic analysis of open-source communities
-\end{itemize}
+% \begin{itemize}
+%     \item Researched and presented master's thesis: economic analysis of open-source communities
+% \end{itemize}
 \vspace{1mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
@@ -169,25 +169,25 @@
 
 \header{Education} \\
 \vspace{1mm}
-\textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
+\textbf{Texas Tech University, Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{Master of Science in Agricultural and Applied Economics} \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
-        \item \textbf{Tools used:} R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
-        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
+        \item Frameworks/Languages/Tools used: R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
+        \item Statistical methods: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
     \end{itemize}
 \end{itemize}
 \vspace{1mm}
 
-\textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
+\textbf{CEVRO Institute, School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{Master of Arts in Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
     \item \textbf{Scholarship:} Full Tuition for Excellence
 \end{itemize}
 \vspace{1mm}
 
-\textbf{University of Michigan College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
+\textbf{University of Michigan, College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
 \textit{Bachelor of Arts in General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
 \vspace{1mm}
@@ -199,16 +199,16 @@
     \item Database Design and Basic SQL in PostgreSQL (\href{https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48}{AD5HZ8JGMZ48}) \hfill \emph{Jan 2023}
     \item Web Applications for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) - \emph{Coursera} (4 courses) \hfill \emph{Oct 2023}
     \begin{itemize}
-        \item \textbf{Tools used:} MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
+        \item Frameworks/Languages/Tools used: MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
     \end{itemize}
     \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - \emph{Coursera} (5 courses) \hfill \emph{Aug 2023}
     \begin{itemize}
-        \item \textbf{Tools used:} Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
-        \item \textbf{ML models:} Gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
+        \item Frameworks/Languages/Tools used: Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
+        \item Frameworks/Languages/Tools used: Gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - \emph{Coursera} (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
-        \item \textbf{Tools used:} Django, SQLite3, HTML5, CSS, JavaScript, Bash
+        \item Frameworks/Languages/Tools used: Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed SOA Exam P \hfill \emph{May 2023}
 \end{itemize}
