--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -174,7 +174,7 @@
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
-        \item Frameworks/Languages/Tools used: R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
+        \item R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
         \item Statistical methods: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
     \end{itemize}
 \end{itemize}
@@ -199,16 +199,16 @@
     \item Database Design and Basic SQL in PostgreSQL (\href{https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48}{AD5HZ8JGMZ48}) \hfill \emph{Jan 2023}
     \item Web Applications for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) - \emph{Coursera} (4 courses) \hfill \emph{Oct 2023}
     \begin{itemize}
-        \item Frameworks/Languages/Tools used: MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
+        \item MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
     \end{itemize}
     \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - \emph{Coursera} (5 courses) \hfill \emph{Aug 2023}
     \begin{itemize}
-        \item Frameworks/Languages/Tools used: Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
-        \item Frameworks/Languages/Tools used: Gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
+        \item Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
+        \item Gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - \emph{Coursera} (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
-        \item Frameworks/Languages/Tools used: Django, SQLite3, HTML5, CSS, JavaScript, Bash
+        \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed SOA Exam P \hfill \emph{May 2023}
 \end{itemize}
