--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -196,17 +196,20 @@
 \header{Certifications and Exams} \\
 \vspace{1mm}
 \begin{itemize}
-    \item Database Design and Basic SQL in PostgreSQL (\href{https://www.coursera.org/account/accomplishments/verify/AD5HZ8JGMZ48}{AD5HZ8JGMZ48}) \hfill \emph{Jan 2023}
-    \item Web Applications for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) - \emph{Coursera} (4 courses) \hfill \emph{Oct 2023}
+    \item PostgreSQL for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE}{LDV5VWF4QFUE}) \hfill Coursera, \emph{May 2024}
+    \begin{itemize}
+        \item PostgreSQL, DBeaver, NoSQL, Elasticsearch
+    \end{itemize}
+    \item Web Applications for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) \hfill Coursera, \emph{Oct 2023}
     \begin{itemize}
         \item MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
     \end{itemize}
-    \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - \emph{Coursera} (5 courses) \hfill \emph{Aug 2023}
+    \item Applied Data Science with Python Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill Coursera, \emph{Aug 2023}
     \begin{itemize}
         \item Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
         \item Gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
-    \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - \emph{Coursera} (4 courses) \hfill \emph{Jul 2023}
+    \item Django for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill Coursera, \emph{Jul 2023}
     \begin{itemize}
         \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
