--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -213,7 +213,7 @@
     \begin{itemize}
         \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
-    \item Passed SOA Exam P \hfill \emph{May 2023}
+    \item Passed Probability exam \hfill Society of Actuaries, \emph{May 2023}
 \end{itemize}
 \vspace{1mm}
 
