--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -17,7 +17,7 @@
     urlcolor=blue
 }
 
-\usepackage[margin=0.8in]{geometry}
+\usepackage[margin=0.75in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
@@ -110,9 +110,10 @@
 \header{Work and Research Experience} \\
 \vspace{1mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
-\textit{Sales and Marketing Analyst \& Salesforce Admin} \hfill  \emph{May 2023 --- Present} \\
+\textit{Sales and Marketing Analyst, IT} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics processes and business rules for financial planning and analysis (ETL, TurboIntegrator processes, TM1 business rules, MDX, Cognos Command Center)
+    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis (PAW, PAfE, ETL, MDX, Cognos Command Center, Arc, Pulse)
+    \item Creating and maintaining cubes, dimensions, subsets, and views in TM1 development, UAT, and production 
     \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
     \item Creating Salesforce reports, dashboards, flows, cadences, and email templates for management and end users
