--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -114,7 +114,7 @@
 \begin{itemize}
     \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis (PAW, PAfE, ETL, MDX, Cognos Command Center, Arc, Pulse)
     \item Creating and maintaining cubes, dimensions, subsets, and views in TM1 development, UAT, and production 
-    \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud) 
+    \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
     \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
     \item Creating Salesforce reports, dashboards, flows, cadences, and email templates for management and end users
 \end{itemize}
